# api/swagger/swagger.json
@@ -227,9 +227,40 @@
     },
     "/api/todos/gettodo": {
       "get": {
-        "summary": "Get todo ",
-        "description": "Retrieve a specific todo item by its ID.",
+        "summary": "Get todo by authorized user",
+        "description": "Retrieve a specific todo item by its id.",
         
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Todo item retrieved successfully."
+          },
+          "401": {
+            "description": "Unauthorized. Token is missing or invalid."
+          },
+          "404": {
+            "description": "Todo item not found."
+          }
+        }
+      }
+    },
+
+    "/api/todos/getTodoByUserId/{userId}": {
+      "get": {
+        "summary": "Get todo by user id",
+        "description": "Retrieve a specific todo item by its ID.",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "security": [
           {
             "Bearer": []
